# neo4j-finanzbetrug-geldwaesche-sanktionumgehung

./: .gitignore  README.md  gds_apoc_cheatsheet.md  neo4j_sanctions_blog.md  neo4j_sanctions_notebook.ipynb  pyproject.toml
.ipynb_checkpoints/: neo4j_sanctions_notebook-checkpoint.ipynb  pyproject-checkpoint.toml
data/: README.md
day1-foundations-eda/: README.md
day2-graphrag/: README.md
day3-integration-observability/: README.md
docs/: agenda.md  domain-demo-neo4j-sanctions.md
infra/: README.md
src/aiready/: __init__.py
