[project]
name = "neo4j-finanzbetrug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.10",
    "matplotlib>=3.10.9",
    "neo4j>=6.2.0",
    "networkx>=3.6.1",
    "pandas>=3.0.3",
    "yfiles-jupyter-graphs>=1.10.11",
    "yfiles-jupyter-graphs-for-neo4j>=1.7.0",
]
